Add a form to the project

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voting App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <title>FED Voting App</title>
 </head>
 <body>
-    <h1>FED Showcase Voting App</h1>
+    <div class="container">
+        <h1>FED Showcase Voting App</h1>
+        <p>Vote for your favorite showcase project</p>
+        <form id="vote-form">
+            <p>
+                <input type="radio" name="" id="">
+            </p>
+        </form>
+    </div>
+    <script
+  src="https://code.jquery.com/jquery-3.5.1.js"
+  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+  crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
