Add form input field and vote button to the index.html page

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,33 @@
 <body>
     <div class="container">
         <h1>FED Showcase Voting App</h1>
-        <p>Vote for your favorite showcase project</p>
+        <p>Vote for your favorite project</p>
         <form id="vote-form">
             <p>
-                <input type="radio" name="" id="">
+                <label>
+                    <input name="fed" type="radio"  id="james">
+                    <span>James</span>
+                </label>
             </p>
+            <p>
+                <label>
+                    <input name="fed" type="radio"  id="doug">
+                    <span>Doug</span>
+                </label>
+            </p>
+            <p>
+                <label>
+                    <input name="fed" type="radio"  id="cristin">
+                    <span>Cristin</span>
+                </label>
+            </p>
+            <p>
+                <label>
+                    <input name="fed" type="radio"  id="caleb">
+                    <span>Caleb</span>
+                </label>
+            </p>
+            <input type="submit" value="vote" class="btn">
         </form>
     </div>
     <script
