Add necessary cdn's and add my own main.js script file

--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,17 @@
             </p>
             <input type="submit" value="vote" class="btn">
         </form>
+        <br>
+        <br>
+        <div id="chartContainer" style="height: 300px; width: 100%"></div>
     </div>
     <script
   src="https://code.jquery.com/jquery-3.5.1.js"
   integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
   crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pusher/7.0.0/pusher.min.js" integrity="sha512-9amDj0TDk+ESmh6fq/prkmY7A1tTNaNnTgCQgePRHrw7Z8LxKMrcqWFOt4WWj7MOvLqbLZ5VaXy1ctAMzwmw/g==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js" integrity="sha512-FJ2OYvUIXUqCcPf1stu+oTBlhn54W0UisZB/TNrZaVMHHhYvLBV9jMbvJYtvDe5x/WVaoXZ6KB+Uqe5hT2vlyA==" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </body>
 </html>
