Fix the error and add a value to each input field

--- a/public/index.html
+++ b/public/index.html
@@ -13,25 +13,25 @@
         <form id="vote-form">
             <p>
                 <label>
-                    <input name="fed" type="radio"  id="james">
+                    <input name="fed" type="radio"  id="james" value="James">
                     <span>James</span>
                 </label>
             </p>
             <p>
                 <label>
-                    <input name="fed" type="radio"  id="doug">
+                    <input name="fed" type="radio"  id="doug" value="Doug">
                     <span>Doug</span>
                 </label>
             </p>
             <p>
                 <label>
-                    <input name="fed" type="radio"  id="cristin">
+                    <input name="fed" type="radio"  id="cristin" value="Cristin">
                     <span>Cristin</span>
                 </label>
             </p>
             <p>
                 <label>
-                    <input name="fed" type="radio"  id="caleb">
+                    <input name="fed" type="radio"  id="caleb" value="Caleb">
                     <span>Caleb</span>
                 </label>
             </p>
