Add changes to the title

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>FED Showcase Voting App</h1>
+        <h1>Your Vote Matters.</h1>
         <p>Vote for your favorite project</p>
         <form id="vote-form">
             <p>
